--- a/src/main.css
+++ b/src/main.css
@@ -38,6 +38,7 @@
   .login-div-heading {
     vertical-align: middle;
     line-height: 80px; 
+    font-size: 40px;
     width: 500px;
     height: 80px;
     text-align: center;
