--- a/src/TopAppBar/TopAppBar.css
+++ b/src/TopAppBar/TopAppBar.css
@@ -11,6 +11,7 @@
   }
   
   .top-app-bar-title-style {
+    padding-left: 40px;
     vertical-align: middle;
     line-height: 80px;
     font-size: 25px;
